introduce new 'multiple' argument, that will put the same multi-valued var multiple times

--- a/templates/config.erb
+++ b/templates/config.erb
@@ -1,1 +1,7 @@
+<% if multiple -%>
+<% for item in @content -%>
+<%= @name %> <%= item %>
+<% end -%>
+<% else -%>
 <%= @name %> <%= [@content].flatten.join(' ') %>
+<% end -%>
