fix variable scoping

--- a/templates/config.erb
+++ b/templates/config.erb
@@ -1,6 +1,6 @@
-<% if multiple -%>
-<% for item in @content -%>
-<%= @name %> <%= item %>
+<% if @multiple -%>
+<% for @item in @content -%>
+<%= @name %> <%= @item %>
 <% end -%>
 <% else -%>
 <%= @name %> <%= [@content].flatten.join(' ') %>
